# airflow

./: README.md  abrir_arq.py  abrir_arquivo_csv.py  banco-de-dados.py  big_data.py  branchs.py  cunsumer.py  custumer.py  dag-complexa.py  dag-run-dag1.py  dag-run-dag2.py  daggroup.py  default-args.py  dummy.py  email.py  hooks.py  ler-numeros.py  main.py  pool.py  primeira-dag.py  primeira_dag.py  produce.py  pyproject.toml  pythonOperator.py  quarta-dag.py  rascunho.py  segunda-dag.py  sensors.py  terceira-dag.py  teste-email-dag.py  trigger-dag1.py  trigger-dag2.py  trigger-dag3.py  variaveis.py  wintubine.py  xcom.py
data/: Churn_clean.csv  Churn_new.json  Churn_new.parquet
