[project]
name = "airflow"
version = "1.0"
description = "Projeto de airflow"
authors = [
    { name = "maycon" }
]
license = { text = "ok" }
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "apache-airflow (>=3.0.1,<4.0.0)"
]

packages = [
    { include = "dags" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
